// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. s2s-action-types 1`] = `
"
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = Increment;

export type Increment = {
  type: typeof INCREMENT
};

export const INCREMENT: \\"app/counter/INCREMENT\\" = \\"app/counter/INCREMENT\\";

export const Actions = {
  INCREMENT
};
"
`;

exports[`1. s2s-action-types 2`] = `
"
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = Increment;

export type Increment = {
  type: typeof INCREMENT
};

export const INCREMENT: \\"counter/INCREMENT\\" = \\"counter/INCREMENT\\";

export const Actions = {
  INCREMENT
};
"
`;

exports[`1. s2s-action-types 3`] = `
"
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = Increment;

export type Increment = {
  type: typeof INCREMENT
};

export const INCREMENT: \\"INCREMENT\\" = \\"INCREMENT\\";

export const Actions = {
  INCREMENT
};
"
`;

exports[`2. s2s-action-types 1`] = `
"
// @flow
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = Increment;

export type Increment = {
  type: typeof INCREMENT
};

export const INCREMENT: \\"app/counter/INCREMENT\\" = \\"app/counter/INCREMENT\\";

export const Actions = {
  INCREMENT
};
"
`;

exports[`3. s2s-action-types 1`] = `
"
export type Action = Increment | Decrement

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = Increment | Decrement;

export type Increment = {
  type: typeof INCREMENT
};
export type Decrement = {
  type: typeof DECREMENT
};

export const INCREMENT: \\"app/counter/INCREMENT\\" = \\"app/counter/INCREMENT\\";
export const DECREMENT: \\"app/counter/DECREMENT\\" = \\"app/counter/DECREMENT\\";

export const Actions = {
  INCREMENT,
  DECREMENT
};
"
`;

exports[`Request/Failure/Success pattern 1`] = `
"
export type Action = FetchRequest;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = FetchRequest | FetchSuccess | FetchFailure;

export type FetchRequest = {
  type: typeof FETCH_REQUEST
};
export type FetchSuccess = {
  type: typeof FETCH_SUCCESS
};
export type FetchFailure = {
  type: typeof FETCH_FAILURE
};

export const FETCH_REQUEST: \\"app/counter/FETCH_REQUEST\\" = \\"app/counter/FETCH_REQUEST\\";
export const FETCH_SUCCESS: \\"app/counter/FETCH_SUCCESS\\" = \\"app/counter/FETCH_SUCCESS\\";
export const FETCH_FAILURE: \\"app/counter/FETCH_FAILURE\\" = \\"app/counter/FETCH_FAILURE\\";

export const Actions = {
  FETCH_REQUEST,
  FETCH_SUCCESS,
  FETCH_FAILURE
};
"
`;

exports[`Request/Failure/Success pattern when Request/Success 1`] = `
"
export type Action = FetchRequest | FetchSuccess;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = FetchRequest | FetchSuccess | FetchFailure;

export type FetchRequest = {
  type: typeof FETCH_REQUEST
};
export type FetchSuccess = {
  type: typeof FETCH_SUCCESS
};
export type FetchFailure = {
  type: typeof FETCH_FAILURE
};

export const FETCH_REQUEST: \\"app/counter/FETCH_REQUEST\\" = \\"app/counter/FETCH_REQUEST\\";
export const FETCH_SUCCESS: \\"app/counter/FETCH_SUCCESS\\" = \\"app/counter/FETCH_SUCCESS\\";
export const FETCH_FAILURE: \\"app/counter/FETCH_FAILURE\\" = \\"app/counter/FETCH_FAILURE\\";

export const Actions = {
  FETCH_REQUEST,
  FETCH_SUCCESS,
  FETCH_FAILURE
};
"
`;

exports[`Request/Failure/Success pattern when exist Success/Failure 1`] = `
"
export type Action = FetchSuccess | FetchFailure;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = FetchSuccess | FetchFailure;

export type FetchSuccess = {
  type: typeof FETCH_SUCCESS
};
export type FetchFailure = {
  type: typeof FETCH_FAILURE
};

export const FETCH_SUCCESS: \\"app/counter/FETCH_SUCCESS\\" = \\"app/counter/FETCH_SUCCESS\\";
export const FETCH_FAILURE: \\"app/counter/FETCH_FAILURE\\" = \\"app/counter/FETCH_FAILURE\\";

export const Actions = {
  FETCH_SUCCESS,
  FETCH_FAILURE
};
"
`;

exports[`already has Actions 1`] = `
"
const x = 'x'

export const Actions = {}

export type Action = Add;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = Add;

export type Add = {
  type: typeof ADD
};

export const ADD: 'app/counter/ADD' = 'app/counter/ADD';

export const Actions = {
  ADD
};
"
`;

exports[`import type 1`] = `
"
import type { UserID } from './types.js'

export type FetchUser = {
  type: typeof FETCH_USER,
  id: UserID
};

export type Action = FetchUser;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { UserID } from './types.js';

export type Action = FetchUser;

export type FetchUser = {
  type: typeof FETCH_USER;
  id: UserID;
};

export const FETCH_USER: 'app/counter/FETCH_USER' = 'app/counter/FETCH_USER';

export const Actions = {
  FETCH_USER
};
"
`;

exports[`imports 1`] = `
"
// @flow
import type { X } from './types';

export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { X } from './types';

export type Action = Increment;

export type Increment = {
  type: typeof INCREMENT
};

export const INCREMENT: 'app/counter/INCREMENT' = 'app/counter/INCREMENT';

export const Actions = {
  INCREMENT
};
"
`;

exports[`no GenericTypeAnnotation 1`] = `
"
export type Action = string

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = ;

export const Actions = {};
"
`;

exports[`no type Action 1`] = `
"
// @flow

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = ;

export const Actions = {};
"
`;

exports[`payload 1`] = `
"
export const INCREMENT: 'app/counter/Increment' = 'app/counter/Increment';

export type Increment = { type: typeof INCREMENT, payload: number };

export type Action = Increment;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = Increment;

export type Increment = { type: typeof INCREMENT; payload: number; };

export const INCREMENT: 'app/counter/INCREMENT' = 'app/counter/INCREMENT';

export const Actions = {
  INCREMENT
};
"
`;

exports[`remove unuded action 1`] = `
"
export const INCREMENT: 'app/counter/Increment' = 'app/counter/Increment';

export type Increment = { type: typeof INCREMENT, payload: number };

export type Action = Decrement;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = Decrement;

export type Decrement = {
  type: typeof DECREMENT
};

export const DECREMENT: 'app/counter/DECREMENT' = 'app/counter/DECREMENT';

export const Actions = {
  DECREMENT
};
"
`;

exports[`snake_case 1`] = `
"
export type Action = ThisIsAction;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export type Action = ThisIsAction;

export type ThisIsAction = {
  type: typeof THIS_IS_ACTION
};

export const THIS_IS_ACTION: \\"app/counter/THIS_IS_ACTION\\" = \\"app/counter/THIS_IS_ACTION\\";

export const Actions = {
  THIS_IS_ACTION
};
"
`;
